16.10.2021 -> Изменения в логике класса роботов